deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-sample-deployment
  namespace: css
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-sample
  template:
    metadata:
      labels:
        app: eks-sample
    spec:
      containers:
        - name: eks-sample
          image: 783297099843.dkr.ecr.us-east-2.amazonaws.com/eks-samples:v1
          ports:
            - containerPort: 8080
