service.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-sample-service
  namespace: css
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
  selector:
    app:  eks-sample
