ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: css
  name: ingress-sample
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /ClientSelfService/*
            backend:
              serviceName: css-dev-service
              servicePort: 8080
          - path: /eks-sample/*
            backend:
              serviceName: eks-sample-service
              servicePort: 8080
